--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.8",
         "pestphp/pest": "^1.21",
         "phpstan/phpstan": "^1.7"
     }
