--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,5 +30,9 @@ jobs:
           tools: composer:v2
           coverage: none
 
-      - name: Unit Tests
+      - name: Install Dependencies
+          run: |
+            composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+
+      - name: Run Tests
         run: ./vendor/bin/pest --colors=always
