--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,8 +31,7 @@ jobs:
           coverage: none
 
       - name: Install Dependencies
-          run: |
-            composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+        run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
       - name: Run Tests
         run: ./vendor/bin/pest --colors=always
